# GEXA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  startup.sh
.github/workflows/: azure-deploy.yml
alembic/: env.py
alembic/versions/: 20241224_001_initial_migration.py  20251228_182825_f5cb7603916b_add_user_id_to_api_keys.py  20260102_165057_a30d2f03de98_add_cascade_delete_to_api_keys.py
dashboard/: app.js  index.html  login.html  styles.css
sdk/python/: README.md  pyproject.toml
sdk/python/gexa_py/: __init__.py  async_client.py  client.py  models.py
src/gexa/: __init__.py  config.py  main.py
src/gexa/api/: __init__.py  auth.py  auth_supabase.py
src/gexa/api/routes/: answer.py  auth.py  contents.py  crawl.py  findsimilar.py  keys.py  research.py  search.py
src/gexa/crawler/: __init__.py  engine.py  extractor.py
src/gexa/database/: __init__.py  connection.py  models.py  schemas.py
src/gexa/search/: __init__.py  embeddings.py  service.py  vector_store.py  web_search.py
